# mapirs

./: .gitattributes  Cargo.toml  Jenkinsfile  LICENSE  README.md  licenses.html
.cargo/: config.toml
.github/workflows/: test.yml
src/: commands.rs  environment.rs  ffi.rs  file_path.rs  flags.rs  lib.rs  structs.rs  types.rs
src/ffi/: conversion.rs  mod.rs
src/structs/: file_descriptor.rs  message.rs  mod.rs  recipient_descriptor.rs
