[package]
name = "mapirs"
version = "0.2.0"
authors = ["nig <nig@tutao.de>"]
edition = "2018"

[lib]
# dynamically linked c library (a dll)
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libc types
libc = "0.2.101"
# used to define the flags used by MAPI calls and enable bitflag operations on them
bitflags = "1.3.2"
# standard directory paths like user, cache etc
directories = "4.0.1"
# for building mailto links
urlencoding = "2.1.0"
# access the windows registry
winreg = "0.9.0"
# time formatting
time = { version = "0.3.4", features = ["formatting", "macros"] }
# generate file names
sha2 = "0.9.8"

# turn on LTO
# reduces the lib's size from 4.5MB to 1.9MB.
# opt-level = "s" only gets us ~another 10kB
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
